--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color: #ffffff;
     color: #9298cc;
-    font-family: 'Adonis', sans-serif;
+    font-family: 'Sloopscriptpro', serif;
     font-family: '바탕체', serif
     margin: 0;
     padding: 0;
