--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
 body {
-    background-color: #ffffff;
+    background-color: #fffffa;
     color: #9298cc;
-    font-family: 'Sloopscriptpro', serif;
+    font-family: 'Sloop script pro', sans-serif;
     font-family: '바탕체', serif
     margin: 0;
     padding: 0;
 }
 
 header {
-    background-color: #ffffff;
+    background-color: #fffffa;
     padding: 20px;
 }
 
@@ -77,7 +77,7 @@ section {
 }
 
 footer {
-    background-color: #ffffff;
+    background-color: #fffffa;
     text-align: center;
     padding: 20px;
 }
