--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 body {
     background-color: #fffffa;
     color: #9298cc;
-    font-family: 'Sloop script pro', sans-serif;
-    font-family: '바탕체', serif
+    font-family: 'Tlab사월의 봄 R TTF', serif;
     margin: 0;
     padding: 0;
 }
