--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
     background-color: #fffffa;
     color: #9298cc;
-    font-family: 'Tlab사월의 봄 R TTF', serif;
+    font-family: 'Sandoll 명조Neo1 TTF', serif;
+    font-family: 'Constantia', serif;
     margin: 0;
     padding: 0;
 }
