--- a/authors.css
+++ b/authors.css
@@ -1,27 +1,50 @@
-.image-container {
-    display: flex;
+body {
+    margin: 35px;
+    font-family: 'Sandoll 명조Neo1', Constantia, serif;
+    background-color: #fffffa;
+    color: #9298cc;
 }
 
-.image-container img {
-    width: 20%;
-    margin-right: 2%; /* 이미지 간 간격 조절을 위해 마진 추가 */
+h1 {
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 
-.image-container img:last-child {
-    margin-right: 0; /* 마지막 이미지의 오른쪽 마진 제거 */
+h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
 }
 
 nav ul {
-    list-style-type: none; /* 리스트 마커 제거 */
-    padding: 0; /* 리스트의 패딩 제거 */
-    margin: 0; /* 리스트의 마진 제거 */
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 nav ul li {
-    display: inline; /* 리스트 항목을 인라인 요소로 배치 */
-    margin-right: 20px; /* 각 항목 사이의 간격 조정 */
+    display: inline;
+    margin-right: 20px;
 }
 
 nav ul li:last-child {
-    margin-right: 0; /* 마지막 항목의 오른쪽 여백 제거 */
+    margin-right: 0;
+}
+
+nav ul li a {
+    color: #9298cc;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    color: #9298cc;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.center {
+    text-align: center;
 }
