--- a/fonts.css
+++ b/fonts.css
@@ -4,7 +4,7 @@
     font-weight: normal; /* 폰트 두께 */
     font-style: normal; /* 폰트 스타일 */
     font-family: 'Onul ArticleBuri Regular';
-    src: url('Onul ArticleBuri.ttf) format('truetype');
+    src: url('Onul ArticleBuri.ttf') format('truetype');
     font-weight: normal; /* 폰트 두께 */
     font-style: normal; /* 폰트 스타일 */
 }
