--- a/fonts.css
+++ b/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Constantia', 'Onul ArticleBuri Regular'; /* 폰트 패밀리명 */
-    src: url('constan.ttf') format('truetype'); /* 폰트 파일 경로 및 형식 */
+    src: url('constan.ttf') format('opentype'); /* 폰트 파일 경로 및 형식 */
     src: url('Onul ArticleBuri.ttf') format('truetype');
     font-weight: normal; /* 폰트 두께 */
     font-style: normal; /* 폰트 스타일 */
