--- a/fonts.css
+++ b/fonts.css
@@ -13,6 +13,6 @@
 }
 
 body {
-    font-family: 'Constantia', 'Onul 아티클 부리 Regular', serif;
+    font-family: 'Constantia', 'Onul 아티클 부리 Regular', Kim jung chul Myungjo Regular;
     color: #9298cc;
 }
