--- a/screen index.css
+++ b/screen index.css
@@ -1,7 +1,7 @@
 /* screen.css */
 
-/* 400px 이상의 화면에서 적용되는 스타일 */
-@media screen and (min-width: 400px) {
+/* 작은 화면에 대한 스타일 */
+@media screen and (max-width: 599px) {
     nav ul {
         margin-left: 0; /* 네비게이션 메뉴 왼쪽 여백 제거 */
         text-align: left; /* 네비게이션 메뉴 왼쪽 정렬 */
@@ -15,10 +15,38 @@
     nav a {
         display: inline-block; /* 링크를 블록 요소로 변경하여 여백 지정 가능하도록 함 */
     }
+
+    h1 {
+        text-align: left; /* 헤더 왼쪽 정렬 */
+    }
+
+    #description {
+        text-align: center; /* 설명 텍스트 가운데 정렬 */
+    }
+
+    #logo {
+        margin: 80px auto; /* 로고의 상단 여백을 줄이고 가운데 정렬 */
+    }
 }
 
-/* 768px 이상의 화면에서 적용되는 스타일 */
-@media screen and (min-width: 768px) {
+/* 중간 크기의 화면에 대한 스타일 */
+@media screen and (min-width: 600px) and (max-width: 1023px) {
+    nav ul {
+        margin-left: 0; /* 네비게이션 메뉴 왼쪽 여백 제거 */
+        text-align: left; /* 네비게이션 메뉴 왼쪽 정렬 */
+    }
+
+    h1 {
+        text-align: left; /* 헤더 왼쪽 정렬 */
+    }
+
+    #logo {
+        margin: 80px auto; /* 로고의 상단 여백을 줄이고 가운데 정렬 */
+    }
+}
+
+/* 큰 화면에 대한 스타일 */
+@media screen and (min-width: 1024px) {
     h1 {
         text-align: left; /* 헤더 왼쪽 정렬 */
     }
@@ -26,5 +54,13 @@
     nav ul {
         margin-left: 0; /* 네비게이션 메뉴 왼쪽 여백 제거 */
         text-align: left; /* 네비게이션 메뉴 왼쪽 정렬 */
+    }
+
+    #description {
+        text-align: center; /* 설명 텍스트 가운데 정렬 */
+    }
+
+    #logo {
+        margin: 80px auto; /* 로고의 상단 여백을 줄이고 가운데 정렬 */
     }
 }
