--- a/screen_index.css
+++ b/screen_index.css
@@ -26,6 +26,9 @@
 
     #logo {
         margin: 80px auto; /* 로고의 상단 여백을 줄이고 가운데 정렬 */
+        width: 100%; /* 로고 이미지의 너비를 100%로 설정하여 부모 요소에 맞게 조정 */
+        max-width: 200px; /* 로고 이미지의 최대 너비를 200px로 제한 */
+        height: auto; /* 높이 자동으로 조정 */
     }
 }
 
