--- a/screen_index.css
+++ b/screen_index.css
@@ -29,6 +29,8 @@
         max-width: 150px; /* 로고 이미지의 최대 너비를 설정 */
         width: 100%; /* 로고 이미지의 너비를 최대 너비로 설정 */
     }
+
+    
 }
 
 /* 중간 크기의 화면에 대한 스타일 */
@@ -47,6 +49,12 @@
         max-width: 200px; /* 로고 이미지의 최대 너비를 설정 */
         width: 100%; /* 로고 이미지의 너비를 최대 너비로 설정 */
     }
+
+    #description {
+        text-align: center
+        margin-top: 10px;
+        font-size: 13pt;
+        line-height: 20pt;;
 }
 
 /* 큰 화면에 대한 스타일 */
@@ -67,4 +75,11 @@
     #logo {
         margin: 60px auto; /* 로고의 상단 여백을 줄이고 가운데 정렬 */
     }
+
+     #description {
+        text-align: center
+        margin-top: 10px;
+        font-size: 13pt;
+        line-height: 20pt;;
+}
 }
