--- a/screen_index.css
+++ b/screen_index.css
@@ -22,15 +22,18 @@
 
     #description {
         text-align: center; /* 설명 텍스트 가운데 정렬 */
+        margin-top: 20px; /* 상단 여백 추가 */
+        position: absolute; /* 절대 위치 지정 */
+        bottom: 0; /* 화면 하단에 배치 */
+        left: 50%; /* 가운데 정렬을 위해 왼쪽 여백 조정 */
+        transform: translateX(-50%); /* 수평 가운데 정렬 */
     }
 
     #logo {
-        margin: 20px auto; /* 로고의 상단 여백을 줄이고 가운데 정렬 */
-        max-width: 150px; /* 로고 이미지의 최대 너비를 설정 */
-        width: 100%; /* 로고 이미지의 너비를 최대 너비로 설정 */
+        margin: 20px auto; /* 로고의 상단 여백을 조정하고 가운데 정렬 */
+        max-width: 80%; /* 로고 이미지의 최대 너비를 설정 */
+        height: auto; /* 높이 자동으로 조정 */
     }
-
-    
 }
 
 /* 중간 크기의 화면에 대한 스타일 */
@@ -45,16 +48,19 @@
     }
 
     #logo {
-        margin: 40px auto; /* 로고의 상단 여백을 줄이고 가운데 정렬 */
-        max-width: 200px; /* 로고 이미지의 최대 너비를 설정 */
-        width: 100%; /* 로고 이미지의 너비를 최대 너비로 설정 */
+        margin: 20px auto; /* 로고의 상단 여백을 조정하고 가운데 정렬 */
+        max-width: 80%; /* 로고 이미지의 최대 너비를 설정 */
+        height: auto; /* 높이 자동으로 조정 */
     }
 
     #description {
-        text-align: center
-        margin-top: 10px;
-        font-size: 13pt;
-        line-height: 20pt;;
+        position: absolute; /* 절대 위치 설정 */
+        bottom: 20px; /* 화면 하단에서의 여백 설정 */
+        left: 50%; /* 가운데 정렬을 위한 왼쪽 위치 조정 */
+        transform: translateX(-50%); /* 가운데 정렬 설정 */
+        text-align: center; /* 텍스트 가운데 정렬 */
+        display: block; /* 숨김 상태 해제 */
+    }
 }
 
 /* 큰 화면에 대한 스타일 */
@@ -70,16 +76,14 @@
 
     #description {
         text-align: center; /* 설명 텍스트 가운데 정렬 */
+        margin-top: 20px; /* 상단 여백 추가 */
+        margin-bottom: 20px; /* 하단 여백 추가 */
     }
 
-    #logo {
-        margin: 60px auto; /* 로고의 상단 여백을 줄이고 가운데 정렬 */
+   #logo {
+        margin: 20px auto; /* 로고의 상단 여백을 조정하고 가운데 정렬 */
+        max-width: 80%; /* 로고 이미지의 최대 너비를 설정 */
+        height: auto; /* 높이 자동으로 조정 */
     }
+}
 
-     #description {
-        text-align: center
-        margin-top: 10px;
-        font-size: 13pt;
-        line-height: 20pt;;
-}
-}
