--- a/screen_index.css
+++ b/screen_index.css
@@ -3,87 +3,94 @@
 /* 작은 화면에 대한 스타일 */
 @media screen and (max-width: 599px) {
     nav ul {
-        margin-left: 0; /* 네비게이션 메뉴 왼쪽 여백 제거 */
-        text-align: left; /* 네비게이션 메뉴 왼쪽 정렬 */
+        margin-left: 0;
+        text-align: left;
     }
 
     nav ul li {
-        display: inline-block; /* 네비게이션 메뉴 항목들을 가로로 배치 */
-        margin-right: 10px; /* 항목들 사이 간격 조절 */
+        display: inline-block;
+        margin-right: 10px;
     }
 
     nav a {
-        display: inline-block; /* 링크를 블록 요소로 변경하여 여백 지정 가능하도록 함 */
+        display: inline-block;
     }
 
     h1 {
-        text-align: left; /* 헤더 왼쪽 정렬 */
+        text-align: left;
     }
 
     #description {
-        text-align: center; /* 설명 텍스트 가운데 정렬 */
-        margin-top: 20px; /* 상단 여백 추가 */
-        position: absolute; /* 절대 위치 지정 */
-        bottom: 0; /* 화면 하단에 배치 */
-        left: 50%; /* 가운데 정렬을 위해 왼쪽 여백 조정 */
-        transform: translateX(-50%); /* 수평 가운데 정렬 */
+        text-align: center;
+        margin-top: 20px;
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 80%; /* 너비 설정 */
     }
 
     #logo {
-        margin: 20px auto; /* 로고의 상단 여백을 조정하고 가운데 정렬 */
-        max-width: 80%; /* 로고 이미지의 최대 너비를 설정 */
-        height: auto; /* 높이 자동으로 조정 */
+        margin: 20px auto;
+        max-width: 80%;
+        height: auto;
     }
 }
 
 /* 중간 크기의 화면에 대한 스타일 */
 @media screen and (min-width: 600px) and (max-width: 1284px) {
     nav ul {
-        margin-left: 0; /* 네비게이션 메뉴 왼쪽 여백 제거 */
-        text-align: left; /* 네비게이션 메뉴 왼쪽 정렬 */
+        margin-left: 0;
+        text-align: left;
     }
 
     h1 {
-        text-align: left; /* 헤더 왼쪽 정렬 */
+        text-align: left;
     }
 
     #logo {
-        margin: 20px auto; /* 로고의 상단 여백을 조정하고 가운데 정렬 */
-        max-width: 80%; /* 로고 이미지의 최대 너비를 설정 */
-        height: auto; /* 높이 자동으로 조정 */
+        margin: 20px auto;
+        max-width: 80%;
+        height: auto;
     }
 
     #description {
-        position: absolute; /* 절대 위치 설정 */
-        bottom: 20px; /* 화면 하단에서의 여백 설정 */
-        left: 50%; /* 가운데 정렬을 위한 왼쪽 위치 조정 */
-        transform: translateX(-50%); /* 가운데 정렬 설정 */
-        text-align: center; /* 텍스트 가운데 정렬 */
-        display: block; /* 숨김 상태 해제 */
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+        display: block;
+        width: 80%; /* 너비 설정 */
     }
 }
 
 /* 큰 화면에 대한 스타일 */
 @media screen and (min-width: 1285px) {
     h1 {
-        text-align: left; /* 헤더 왼쪽 정렬 */
+        text-align: left;
     }
 
     nav ul {
-        margin-left: 0; /* 네비게이션 메뉴 왼쪽 여백 제거 */
-        text-align: left; /* 네비게이션 메뉴 왼쪽 정렬 */
+        margin-left: 0;
+        text-align: left;
     }
 
     #description {
-        text-align: center; /* 설명 텍스트 가운데 정렬 */
-        margin-top: 20px; /* 상단 여백 추가 */
-        margin-bottom: 20px; /* 하단 여백 추가 */
+        text-align: center;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        position: static; /* position을 static으로 변경 */
+        width: 80%; /* 너비 설정 */
+        margin-left: auto; /* 왼쪽 여백을 자동으로 설정 */
+        margin-right: auto; /* 오른쪽 여백을 자동으로 설정 */
     }
 
    #logo {
-        margin: 20px auto; /* 로고의 상단 여백을 조정하고 가운데 정렬 */
-        max-width: 80%; /* 로고 이미지의 최대 너비를 설정 */
-        height: auto; /* 높이 자동으로 조정 */
+        margin: 20px auto;
+        max-width: 80%;
+        height: auto;
     }
 }
+
 
