--- a/screen_index.css
+++ b/screen_index.css
@@ -5,11 +5,13 @@
     nav ul {
         margin-left: 0;
         text-align: left;
+        white-space: nowrap;
     }
 
     nav ul li {
         display: inline;
         margin-right: 10px;
+        white-space: nowrap;
     }
 
     nav a {
@@ -18,6 +20,7 @@
 
     h1 {
         text-align: left;
+        white-space: nowrap;
     }
 
     #description {
@@ -28,6 +31,20 @@
         left: 50%;
         transform: translateX(-50%);
         width: 80%; /* 너비 설정 */
+        white-space: nowrap;
+    }
+
+    .wrapper {
+        background-color: #fffffa;
+        min-height: 100dvh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .content {
+        background: none;
+        padding: 10px
     }
 
     #logo {
@@ -45,11 +62,13 @@
     nav ul {
         margin-left: 0;
         text-align: left;
+        white-space: nowrap;
     }
 
     nav ul li {
         display: inline;
         margin-right: 10px;
+        white-space: nowrap;
     }
 
     nav a {
@@ -58,6 +77,7 @@
 
     h1 {
         text-align: left;
+        white-space: nowrap;
     }
 
     #logo {
@@ -77,7 +97,22 @@
         text-align: center;
         display: block;
         width: 80%; /* 너비 설정 */
+        white-space: nowrap;
     }
+
+    .wrapper {
+        background-color: #fffffa;
+        min-height: 100dvh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .content {
+        background: none;
+        padding: 10px
+    }
+    
 }
 
 /* 큰 화면에 대한 스타일 */
@@ -85,11 +120,13 @@
     nav ul {
         margin-left: 0;
         text-align: left;
+        white-space: nowrap;
     }
 
     nav ul li {
         display: inline;
         margin-right: 10px;
+        white-space: nowrap;
     }
 
     nav a {
@@ -98,6 +135,7 @@
 
     h1 {
         text-align: left;
+        white-space: nowrap;
     }
 
 
@@ -109,6 +147,7 @@
         width: 80%; /* 너비 설정 */
         margin-left: auto; /* 왼쪽 여백을 자동으로 설정 */
         margin-right: auto; /* 오른쪽 여백을 자동으로 설정 */
+        white-space: nowrap;
     }
 
   #logo {
@@ -118,6 +157,20 @@
         margin-left: auto; /* 왼쪽 여백을 자동으로 설정 */
         margin-right: auto; /* 오른쪽 여백을 자동으로 설정 */
     }
+
+    .wrapper {
+        background-color: #fffffa;
+        min-height: 100dvh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .content {
+        background: none;
+        padding: 10px
+    }
+    
 }
 
 
