--- a/screen_index.css
+++ b/screen_index.css
@@ -25,12 +25,7 @@
 
 
     #logo {
-        margin: 20px auto;
-        max-width: 50%;
-        display: block; /* 요소를 블록 요소로 변경 */
-        margin-left: auto; /* 왼쪽 여백을 자동으로 설정 */
-        margin-right: auto; /* 오른쪽 여백을 자동으로 설정 */
-        height: auto;
+        text-align: center;
     }
 
     #description {
@@ -83,12 +78,7 @@
     }
 
     #logo {
-        margin: 20px auto;
-        max-width: 80%;
-        display: block; /* 요소를 블록 요소로 변경 */
-        margin-left: auto; /* 왼쪽 여백을 자동으로 설정 */
-        margin-right: auto; /* 오른쪽 여백을 자동으로 설정 */
-        height: auto;
+        text-align: center;
     }
 
     #description {
@@ -142,11 +132,7 @@
     }
 
     #logo {
-        margin: 30px auto; /* 상하 여백을 20px로 설정하고 가운데 정렬 */
-        max-width: 50%;
-        display: block; /* 요소를 블록 요소로 변경 */
-        margin-left: auto; /* 왼쪽 여백을 자동으로 설정 */
-        margin-right: auto; /* 오른쪽 여백을 자동으로 설정 */
+        text-align: center;
     }
 
     #description {
