--- a/screen_index.css
+++ b/screen_index.css
@@ -24,9 +24,10 @@
     }
 
 
-    #logo {
-        text-align: center;
-    }
+   .image {
+  background-image: url("로고.jpg");
+  background-size: cover;
+}
 
     #description {
         bottom: 20px;
@@ -77,9 +78,10 @@
         white-space: nowrap;
     }
 
-    #logo {
-        text-align: center;
-    }
+    .image {
+  background-image: url("로고.jpg");
+  background-size: cover;
+}
 
     #description {
         bottom: 20px;
@@ -131,9 +133,10 @@
         white-space: nowrap;
     }
 
-    #logo {
-        text-align: center;
-    }
+   .image {
+  background-image: url("로고.jpg");
+  background-size: cover;
+}
 
     #description {
         bottom: 20px;
