--- a/screen_index.css
+++ b/screen_index.css
@@ -26,7 +26,7 @@
 
    .image {
   background-image: url("로고.jpg");
-  background-size: contain;
+  background-size: 70%;
 }
 
     #description {
@@ -80,7 +80,7 @@
 
     .image {
   background-image: url("로고.jpg");
-  background-size: contain;
+  background-size: 70%;
 }
 
     #description {
@@ -135,7 +135,7 @@
 
    .image {
   background-image: url("로고.jpg");
-  background-size: contain;
+  background-size: 70%;
 }
 
     #description {
