--- a/screen_index.css
+++ b/screen_index.css
@@ -2,7 +2,7 @@
 
 /* 모든 화면 크기에 대한 공통 스타일 */
 nav ul {
-    margin-left: 0;
+    margin-left: 10%;
     text-align: left;
     white-space: nowrap;
 }
@@ -18,13 +18,18 @@ nav a {
 }
 
 h1 {
+    margin-left: 10%;
     text-align: left;
     white-space: nowrap;
 }
 
 .image {
     background-image: url("로고.jpg");
-    background-size: 70%;
+    background-size: contain;
+    background-position: center;
+    width: 70%;
+    margin: 0 auto;
+
 }
 
 #description {
