--- a/screen_index.css
+++ b/screen_index.css
@@ -23,54 +23,17 @@ h1 {
     white-space: nowrap;
 }
 
-.image {
-    background-image: url("로고.jpg");
-    background-size: contain;
-    background-position: center;
-    width: 70%;
-    margin: 0 auto;
-
+.background { /* 클래스로 스타일을 지정한 요소에 배경 이미지를 설정 */
+    background-image: url('로고.jpg');
+    background-size: cover;
+    height: 300px;
+    margin-top: 50px;
 }
 
 #description {
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
     text-align: center;
-    display: block;
-    width: 80%; /* 너비 설정 */
-    white-space: nowrap;
-    display: table-cell;
-    vertical-align: bottom;
+    margin-top: 30px;
+    font-size: 13pt;
+    line-height: 20pt;
 }
-
-.wrapper {
-    background-color: #fffffa;
-    min-height: 100dvh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.content {
-    background: none;
-    padding: 10px
-}
-
-
-/* 작은 화면에 대한 스타일 */
-@media screen and (max-width: 599px) {
-
-}
-
-/* 중간 크기의 화면에 대한 스타일 */
-@media screen and (min-width: 600px) and (max-width: 1284px) {
-
-}
-
-/* 큰 화면에 대한 스타일 */
-@media screen and (min-width: 1285px) {
-   
-}
-
 
