--- a/screen_index.css
+++ b/screen_index.css
@@ -32,7 +32,7 @@ h1 {
 
 #description {
     text-align: center;
-    margin-top: 30px;
+    margin-bottom: 30px;
     font-size: 13pt;
     line-height: 20pt;
 }
