--- a/screen_index.css
+++ b/screen_index.css
@@ -15,6 +15,8 @@ nav ul li {
 
 nav a {
     display: inline;
+    text-decoration: none; /* 밑줄 없애기 */
+    color: #9298cc; /* 원하는 색상으로 설정 */
 }
 
 h1 {
@@ -37,5 +39,6 @@ h1 {
     text-align: center; /* 텍스트는 가운데 정렬합니다. */
     height: 90vh; /* 화면 높이의 90%만큼의 높이를 가집니다. */
     margin-bottom: 10vh; /* 하단에서 10%만큼의 간격을 띄웁니다. */
+    background-color: none;
 }
 
