--- a/screen_index.css
+++ b/screen_index.css
@@ -26,6 +26,7 @@ h1 {
 }
 
 .background { /* 클래스로 스타일을 지정한 요소에 배경 이미지를 설정 */
+    background-color: #fffffa;
     background-image: url('로고.jpg');
     background-size: 100%;
     height: 300px;
