--- a/screen_index.css
+++ b/screen_index.css
@@ -2,44 +2,42 @@
 
 /* 모든 화면 크기에 대한 공통 스타일 */
 nav ul {
-    margin-left: 3%;
-    text-align: left;
-    white-space: nowrap;
+  margin-left: 3%;
+  text-align: left;
 }
 
 nav ul li {
-    display: inline;
-    margin-right: 10px;
-    white-space: nowrap;
+  display: inline;
+  margin-right: 10px;
+  white-space: normal; /* 텍스트 줄 바꿈 허용 */
 }
 
 nav a {
-    display: inline;
-    text-decoration: none; /* 밑줄 없애기 */
-    color: #9298cc; /* 원하는 색상으로 설정 */
+  display: inline;
 }
 
 h1 {
-    margin-left: 5%;
-    text-align: left;
-    white-space: nowrap;
+  margin-left: 5%;
+  text-align: left;
+  white-space: normal; /* 텍스트 줄 바꿈 허용 */
 }
 
-.background { /* 클래스로 스타일을 지정한 요소에 배경 이미지를 설정 */
-    background-color: #fffffa;
-    background-image: url('로고.jpg');
-    background-size: 100%;
-    height: 300px;
-    margin-top: 50px;
+.background {
+  background-image: url('로고.jpg');
+  background-size: 100%;
+  height: 300px;
+  margin-top: 50px;
 }
 
 #description {
-    display: flex; /* 요소를 행으로 배치합니다. */
-    justify-content: center; /* 수평 가운데 정렬합니다. */
-    align-items: flex-end; /* 아래에서 정렬합니다. */
-    text-align: center; /* 텍스트는 가운데 정렬합니다. */
-    height: 90vh; /* 화면 높이의 90%만큼의 높이를 가집니다. */
-    margin-bottom: 10vh; /* 하단에서 10%만큼의 간격을 띄웁니다. */
-    background-color: none;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  text-align: center;
+  flex-wrap: wrap; /* 여러 줄 텍스트 줄 바꿈 */
+  max-width: 80%; /* 콘텐츠 영역 너비 최대 80% */
+  margin: 0 auto; /* 가운데 정렬 */
+  line-height: 1.5; /* 텍스트 줄 간격 조절 */
+  font-size: 16px; /* 폰트 크기 조절 */
 }
 
