--- a/screen_index.css
+++ b/screen_index.css
@@ -9,7 +9,7 @@ nav ul {
 nav ul li {
   display: inline;
   margin-right: 10px;
-  white-space: normal; /* 텍스트 줄 바꿈 허용 */
+  white-space: nowrap; /* 텍스트 줄 바꿈 허용 */
 }
 
 nav a {
@@ -19,12 +19,13 @@ nav a {
 h1 {
   margin-left: 5%;
   text-align: left;
-  white-space: normal; /* 텍스트 줄 바꿈 허용 */
+  white-space: nowrap; /* 텍스트 줄 바꿈 허용 */
 }
 
 .background {
   background-image: url('로고.jpg');
-  background-size: 100%;
+  background-size: cover; /* 이미지를 화면에 맞게 조절 */
+  background-position: center; /* 이미지를 가운데 정렬 */
   height: 300px;
   margin-top: 50px;
 }
