--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,8 @@ body {
     font-family: 'Constantia', 'Onul 아티클 부리 Regular', Kim jung chul Myungjo Regular, serif;
     color: #9298cc;
 }
+
+#description {
+    font-family: 'Constantia', 'Onul 아티클 부리 Regular', Kim jung chul Myungjo Regular, serif;
+    color: #9298cc;
+}
